# elect-gen-backend

./: .gitignore  .gitlab-ci.yml  .npmrc  CHANGELOG.md  ElectGen.spec  README.md  algorithm.py  gui.py  package.json  pyproject.toml  requirements.txt  scripts.py
.tmp/: c.json  c_hum.json  c_tech.json  d.json  d_hum.json  d_tech.json  s.json  s_hum.json  s_tech.json
.zed/: settings.json
examples/: Courses.xlsx  Students.xlsx
src/: cli.py  main.py  models.py  tables.py
src/database/: algorithm.py  courses.json  crud.py  database.py  distribution.json  manual_course_addition_to_db.py  manual_student_addition_to_db.py  models.py  schemas.py  students.json  students_old.json
src/routes/: __init__.py  api.py
utils/: db_json_converter.py  excel_converter.py
