[tool.poetry]
# package-mode = false
name = "Elect.Gen"
version = "0.1.0"
description = "A distribution system to assign students to electives."
license = "MIT"
authors = [
  "Arsen Galiev <a.galiev@innopolis.university>",
  "Asqar Arslanov <a.arslanov@innopolis.university>",
  "Ilya-Linh Nguen <i.nguen@innopolis.university>",
  "Kirill Efimovich <k.efimovich@innopolis.university>",
  "Maksim Malov <m.malov@innopolis.university>",
]
maintainers = ["Asqar Arslanov <a.arslanov@innopolis.university>"]
readme = "README.md"
repository = "https://gitlab.pg.innopolis.university/sdr-sum24/elect-gen-backend"
packages = [{ include = "*", from = "src" }]

[tool.poetry.scripts]
dev = "scripts:dev"
start = "scripts:start"
lint = "scripts:lint"
format = "scripts:format"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
typed-argument-parser = "^1.10.1"
uvicorn = "^0.30.1"


[tool.poetry.group.dev.dependencies]
basedpyright = "^1.13.2"
ruff = "^0.5.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
