[tool.poetry]
name = "Elect.Gen"
version = "0.1.0"
description = "A distribution system to assign students to electives."
license = "MIT"
authors = [
  "Arsen Galiev <a.galiev@innopolis.university>",
  "Asqar Arslanov <a.arslanov@innopolis.university>",
  "Ilya-Linh Nguen <i.nguen@innopolis.university>",
  "Kirill Efimovich <k.efimovich@innopolis.university>",
  "Maksim Malov <m.malov@innopolis.university>",
]
maintainers = ["Asqar Arslanov <a.arslanov@innopolis.university>"]
readme = "README.md"
repository = "https://gitlab.pg.innopolis.university/sdr-sum24/elect-gen-backend"
packages = [{ include = "*", from = "src" }]

[tool.poetry.scripts]
dev = "scripts:dev"
start = "scripts:start"
lint = "scripts:lint"
format = "scripts:format"
tmp = "src.tmp:main"
test = 'scripts:test'

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.111.0"
openpyxl = "^3.1.5"
pandas = "^2.2.2"
typed-argument-parser = "^1.10.1"
uvicorn = "^0.30.1"
sqlalchemy = "^2.0.31"
async-exit-stack = "^1.0.1"
async-generator = "^1.10"
psycopg2-binary = "^2.9.9"
numpy = "^2.0.0"
matplotlib = "^3.9.1"
seaborn = "^0.13.2"
python-dotenv = "^1.0.1"
python-multipart = "^0.0.9"


[tool.poetry.group.dev.dependencies]
basedpyright = "^1.13.2"
ruff = "^0.5.1"


[tool.pyright]
venvPath = "."
venv = ".venv"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
